kubernetes/apps/default/oauth-pages/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oauth-pages
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-oauth-admin
      namespace: network
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-oauth-users
      namespace: network
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-oauth-internal
      namespace: network
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
  hostnames:
    - oauth.${SECRET_DOMAIN}
    - oauth-users.${SECRET_DOMAIN}
    - oauth-internal.${SECRET_DOMAIN}
    - argocd.${SECRET_DOMAIN}
    - grafana.${SECRET_DOMAIN}
    - paseo.${SECRET_DOMAIN}
    - echo.${SECRET_DOMAIN}
    - external.${SECRET_DOMAIN}
  rules:
    - name: callback
      matches:
        - path:
            type: Exact
            value: /oauth2/callback
      backendRefs:
        - group: ""
          kind: Service
          name: oauth-pages
          port: 80
          weight: 1
    - name: logout
      matches:
        - path:
            type: Exact
            value: /logout
      backendRefs:
        - group: ""
          kind: Service
          name: oauth-pages
          port: 80
          weight: 1
    - name: denied
      matches:
        - path:
            type: Exact
            value: /denied
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /denied.html
      backendRefs:
        - group: ""
          kind: Service
          name: oauth-pages
          port: 80
          weight: 1
    - name: logged-out
      matches:
        - path:
            type: Exact
            value: /logged-out
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /logged-out.html
      backendRefs:
        - group: ""
          kind: Service
          name: oauth-pages
          port: 80
          weight: 1
