kubernetes/apps/default/oauth-pages/app/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: oauth-pages-public
  namespace: default
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: oauth-pages
      sectionName: callback
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: oauth-pages
      sectionName: denied
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: oauth-pages
      sectionName: logged-out
  authorization:
    defaultAction: Allow
